[workspace]
members = [
    "utils",
    "day1",
    "day2",
    "day3",
    "day4",
    "day5",
    "day6",
    "day7",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
clap = { version = "4.4.10", features = ["derive"] }
eyre = "0.6.9"
utils = { path = "utils" }
