[workspace]
members = [
    "utils",
    "utils-derive",
    "day1",
    "day2",
    "day3",
    "day4",
    "day5",
    "day6",
    "day7",
    "day8",
    "day9",
    "day10",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
eyre = "0.6.9"
utils = { path = "utils" }
